--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,34 @@
   top: 0;
 }
 
+.dash_div{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.product{
+  width: 400px;
+  height: 150px;
+  background-color: #d34735;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  padding: 10px 10px;
+}
+img {
+  height: 150px;
+  width: 200px;
+}
+.prod_main{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 150px;
+}
+
+
+
 
