--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height: 80vh;
+  overflow-y: auto;
 }
 
 .product{
